--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-<p>dashboard works!</p>
+<h1>Dashboard</h1>
+<div id="pie_chart"></div>
+<div id="3d_pie_chart"></div>
+<div id="donut_chart"></div>
+<div id="bar_chart"></div>
+<div id="line_chart"></div>
+<div id="column_chart"></div>
+
